VALIDATES FEITOS - TODAS AS TABELAS POR ENQUANTO - (TUDO CERTO)
