# src/docs/swagger.yaml
@@ -39,7 +39,7 @@
                 },
                 "DataNascimento": {
                   "type": "string",
-                  "example": "1990-01-01"
+                  "example": "01-01-1990"
                 },
                 "Sexo": {
                   "type": "string",
@@ -56,6 +56,9 @@
         "responses": {
           "201": {
             "description": "Paciente cadastrado com sucesso"
+          },
+          "400": {
+            "description": "Solicitação Inválida"
           },
           "500": {
             "description": "Erro Interno do Servidor"
@@ -82,7 +85,7 @@
                   },
                   "DataNascimento": {
                     "type": "string",
-                    "example": "1990-01-01"
+                    "example": "01-01-1990"
                   },
                   "Sexo": {
                     "type": "string",
@@ -133,7 +136,7 @@
                 },
                 "DataNascimento": {
                   "type": "string",
-                  "example": "1990-01-01"
+                  "example": "01-01-1990"
                 },
                 "Sexo": {
                   "type": "string",
@@ -210,7 +213,7 @@
                 },
                 "CRM": {
                   "type": "string",
-                  "example": "123456"
+                  "example": "123456/SP"
                 },
                 "MedicoTelefone": {
                   "type": "string",
@@ -223,6 +226,9 @@
         "responses": {
           "201": {
             "description": "Médico cadastrado com sucesso"
+          },
+          "400": {
+            "description": "Solicitação Inválida"
           },
           "500": {
             "description": "Erro Interno do Servidor"
@@ -257,7 +263,7 @@
                   },
                   "CRM": {
                     "type": "string",
-                    "example": "123456"
+                    "example": "123456/SP"
                   },
                   "MedicoTelefone": {
                     "type": "string",
@@ -308,7 +314,7 @@
                 },
                 "CRM": {
                   "type": "string",
-                  "example": "123456"
+                  "example": "123456/SP"
                 },
                 "MedicoTelefone": {
                   "type": "string",
@@ -385,7 +391,7 @@
                 },
                 "DataAdmissao": {
                   "type": "string",
-                  "example": "2024-01-01"
+                  "example": "01-01-2024"
                 },
                 "Turno": {
                   "type": "string",
@@ -398,6 +404,9 @@
         "responses": {
           "201": {
             "description": "Enfermeiro cadastrado com sucesso"
+          },
+          "400": {
+            "description": "Solicitação Inválida"
           },
           "500": {
             "description": "Erro Interno do Servidor"
@@ -432,7 +441,7 @@
                   },
                   "DataAdmissao": {
                     "type": "string",
-                    "example": "2024-01-01"
+                    "example": "01-01-2024"
                   },
                   "Turno": {
                     "type": "string",
@@ -487,7 +496,7 @@
                 },
                 "DataAdmissao": {
                   "type": "string",
-                  "example": "2024-01-01"
+                  "example": "01-01-2024"
                 },
                 "Turno": {
                   "type": "string",
